@@ -588,6 +588,17 @@ vcsetup(sa, fdp, myname, mynamemax)
 
 	errnosave = errno = 0;
 
+	if (sa->sa_family == AF_INET) {
+	  struct sockaddr_in *si = (struct sockaddr_in*) sa;
+	  unsigned long  ia = ntohl(si->sin_addr.s_addr);
+	  int anet = ia >> 24;
+	  if (anet <= 0 || anet == 127 ||  anet >= 224) {
+	    close(sk);
+	    errno = EADDRNOTAVAIL;
+	    return EX_UNAVAILABLE;
+	  }
+	}
+
 	if (connect(sk, sa, addrsiz) < 0 &&
 	    (errno == EWOULDBLOCK || errno == EINPROGRESS)) {
 
